--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 <title>ROFL pimp</title>
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.6.0/build/reset/reset-min.css" />
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/style_1.css" />
+<script type="text/javascript" src="http://o.aolcdn.com/dojo/1.2.0/dojo/dojo.xd.js" djConfig="parseOnLoad:true"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/rofl.js"></script>
 </head>
 <body>
     <div id="header">
